update front end

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -21,35 +21,33 @@
 
 .bg-cuy{
     background: rgb(255,255,255);
-    background: -moz-radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(0,153,42,1) 100%);
-    background: -webkit-radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(0,153,42,1) 100%);
-    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(0,153,42,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#00992a",GradientType=1);
+    background: -moz-radial-gradient(circle, rgb(16, 90, 1) 0%, rgb(22, 22, 22) 100%);
+    background: -webkit-radial-gradient(circle, rgb(16, 90, 1) 0%, rgb(22, 22, 22) 100%);
+    background: radial-gradient(circle, rgb(16, 90, 1) 0%, rgb(22, 22, 22) 100%);
 }
 
 .bg-main{
     height: auto;
     background: rgb(33,205,80);
-background: -moz-linear-gradient(126deg, rgba(33,205,80,1) 0%, rgba(101,163,93,1) 55%, rgba(0,89,24,1) 100%);
-background: -webkit-linear-gradient(126deg, rgba(33,205,80,1) 0%, rgba(101,163,93,1) 55%, rgba(0,89,24,1) 100%);
-background: linear-gradient(126deg, rgba(33,205,80,1) 0%, rgba(101,163,93,1) 55%, rgba(0,89,24,1) 100%);
+    background: rgb(255,255,255);
+    background: -moz-radial-gradient(circle, rgb(16, 90, 1) 0%, rgb(22, 22, 22) 100%);
+    background: -webkit-radial-gradient(circle, rgb(16, 90, 1) 0%, rgb(22, 22, 22) 100%);
+    background: radial-gradient(circle, rgb(16, 90, 1) 0%, rgb(22, 22, 22) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#21cd50",endColorstr="#005918",GradientType=1);
 }
 
 .bg-sidebar{
-    background: rgb(2,164,46);
-background: -moz-linear-gradient(180deg, rgba(2,164,46,1) 0%, rgba(175,255,186,1) 30%, rgba(2,164,46,1) 100%);
-background: -webkit-linear-gradient(180deg, rgba(2,164,46,1) 0%, rgba(175,255,186,1) 30%, rgba(2,164,46,1) 100%);
-background: linear-gradient(180deg, rgba(2,164,46,1) 0%, rgba(175,255,186,1) 30%, rgba(2,164,46,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#02a42e",endColorstr="#02a42e",GradientType=1);
+    background: rgb(255,255,255);
+    background: -moz-radial-gradient(circle, rgb(16, 90, 1) 0%,  rgb(49, 82, 42) 100%);
+    background: -webkit-radial-gradient(circle, rgb(27, 51, 22) 0%,  rgb(49, 82, 42) 100%);
+    background: radial-gradient(circle, rgb(16, 90, 1) 0%, rgb(49, 82, 42) 100%);
 }
 
 .bg-navbar{
-    background: rgb(2,164,46);
-background: -moz-radial-gradient(circle, rgba(2,164,46,1) 0%, rgba(95,219,111,1) 81%, rgba(2,164,46,1) 100%);
-background: -webkit-radial-gradient(circle, rgba(2,164,46,1) 0%, rgba(95,219,111,1) 81%, rgba(2,164,46,1) 100%);
-background: radial-gradient(circle, rgba(2,164,46,1) 0%, rgba(95,219,111,1) 81%, rgba(2,164,46,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#02a42e",endColorstr="#02a42e",GradientType=1);
+    background: rgb(255,255,255);
+    background: -moz-radial-gradient(circle, rgb(16, 90, 1) 0%,  rgb(49, 82, 42) 100%);
+    background: -webkit-radial-gradient(circle, rgb(27, 51, 22) 0%,  rgb(49, 82, 42) 100%);
+    background: radial-gradient(circle, rgb(16, 90, 1) 0%, rgb(49, 82, 42) 100%);
 }
 
 .pagination .page-link {
@@ -79,6 +77,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#02a42e",endCo
 .active{
     color:black;
 }
+
 
 .bg-card {
     background-color: rgba(129, 213, 131, 0.575); /* Hitam dengan 50% transparansi */
